--- a/front/style.css
+++ b/front/style.css
@@ -787,7 +787,7 @@ main {
 }
 
  .modal2 {
-    display: none; /* 기본적으로 숨김 */
+    display: block; /* 기본적으로 숨김 */
     position: fixed;
     z-index: 1000;
     width: 100%;
