--- a/front/style.css
+++ b/front/style.css
@@ -1102,14 +1102,19 @@ main {
 }
 
 .input__container {
-    width: 70%;
+    width:100%;
 }
-.input__container label { font-size: 11px; }
+.input__container label {
+     font-size: 10px; 
+}
 
 .input__container input,
 textarea {
     width: 20px;
 }
+ .lable{
+    font-size:10px;
+ }
 }
 
   .gallery {
