--- a/front/style.css
+++ b/front/style.css
@@ -1097,8 +1097,11 @@ main {
     display: block; /* 한 줄 차지하도록 설정 */
 }
 
-.input__container{
+.form{
     width: 100%;
+}
+.input__container{
+    width: 50%;
 }
 
 .input__container label {
