--- a/front/style.css
+++ b/front/style.css
@@ -1030,6 +1030,9 @@ main {
         margin-bottom: 580px;
     }
 
+    .photo-noza1 img, .photo-noza2 img{
+        max-width: 350px; 
+    }
     .happy1{
         margin-bottom: 430px;
     }
