--- a/front/style.css
+++ b/front/style.css
@@ -1030,7 +1030,7 @@ main {
         margin-bottom: 580px;
     }
 
-    .photo-nozaki img, .photo-jing img, .photo-asuka img{
+    .photo-nozaki img, .photo-jing2 img, .photo-jing3 img, .photo-asuka img, .photo-a img{
         max-width: 350px; 
         height: auto; 
     }
