--- a/front/style.css
+++ b/front/style.css
@@ -1030,9 +1030,13 @@ main {
         margin-bottom: 580px;
     }
 
-    .photo-nozaki img, .photo-jing2 img, .photo-jing3 img, .photo-asuka img, .photo-a img, .wends-photo img, .photo-hanna img, .photo-hanna2 img, .photo-hanna3 img{
+    .photo-nozaki img, .photo-jing2 img, .photo-jing3 img, .photo-asuka img, .photo-a img, .photo-hanna img, .photo-hanna2 img, .photo-hanna3 img{
         max-width: 350px; 
         height: auto; 
+    }
+
+    .wends-photo img{
+        max-width: 400px;
     }
     .happy1{
         margin-bottom: 430px;
