--- a/front/style.css
+++ b/front/style.css
@@ -1035,7 +1035,7 @@ main {
         height: auto; 
     }
 
-    .wends-photo{
+    .wends-photo img{
         max-width: 480px;
     }
     .happy1{
